<resources>
    <string name="app_name">My Application</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="title_activity_compose">Simple Text Example</string>
    <string name="title_activity_custom_text">Custom Text Example</string>
    <string name="title_activity_list">Vertical Scrollable Examples</string>
    <string name="title_activity_horizontal_scrollable">Horizontal Carousel Example</string>
    <string name="title_activity_grid_layout">Grid Example</string>
    <string name="title_activity_image">Load Image Example</string>
    <string name="title_activity_clickable">Clickable Example</string>
    <string name="title_activity_drawer">Drawer App Example</string>
    <string name="title_activity_button">Buttons Example</string>
    <string name="title_activity_state">State Example</string>
    <string name="title_custom_view">Custom View Example</string>
    <string name="title_custom_view_paint">Custom View Paint Example</string>
    <string name="title_text_input_example">Text Input Examples</string>
    <string name="title_stack_example">Stack Example</string>
    <string name="title_view_arrangement_example">View Layout Arrangement Examples</string>
    <string name="title_material_example">Material Design Examples</string>
    <string name="title_fab_example">Floating Action Button Example</string>
    <string name="title_constraint_layout_example">Constraint Layout Examples</string>
    <string name="title_bottom_navigation_example">Bottom Navigation Example</string>
    <string name="title_animation_example">Animation Example</string>
    <string name="title_text_inline_content_example">Text Inline Content Example</string>
    <string name="title_list_animation_example">List Animation Example</string>
    <string name="title_theme_example">Theme Example</string>
    <string name="title_layout_modifier_examples">Layout Modifier Examples</string>
    <string name="title_process_death_examples">Save State In Process Death Examples</string>
    <string name="title_live_data_example">Live Data Example</string>
    <string name="title_filter_chips_example">Filter Chips Example</string>
    <string name="title_shadow_example">Shadow Example</string>
    <string name="title_coroutine_flow_example">Coroutine Flow Example</string>
    <string name="title_compose_classic_example">Compose In Classic Android Example</string>
    <string name="title_measuring_scale_example">Measuring Scale Example</string>
    <string name="title_back_press_example">Back Press Example</string>
    <string name="title_zoomable_example">Zoomable Example</string>

    <string name="tv_simple_text_example">Display Text</string>
    <string name="tv_custom_text_example">Display Styled Text</string>
    <string name="tv_vertical_scrollable_example">Vertical Scrollable List</string>
    <string name="tv_horizontal_scrollable_example">Horizontal Carousel</string>
    <string name="tv_load_image_example">Loading Images</string>
    <string name="tv_grid_example">Grid Layout</string>
    <string name="tv_clickable_component_example">Clickable Component</string>
    <string name="tv_drawer_component_example">Drawer App Component</string>
    <string name="tv_buttons_component_example">Buttons Components</string>
    <string name="tv_state_component_example">State Components</string>
    <string name="tv_custom_view_example">Custom View Component</string>
    <string name="tv_custom_view_paint_example">Custom View Paint Component</string>
    <string name="tv_text_input_example">Text Input Components</string>
    <string name="tv_stack_example">Stack Component</string>
    <string name="tv_view_layout_arrangement_example">View Layout Arrangements Components</string>
    <string name="tv_material_design_example">Material Design Components</string>
    <string name="tv_fab_example">Fixed Action Button Component</string>
    <string name="tv_constraint_layout_example">Constraint Layout Components</string>
    <string name="tv_bottom_navigation_example">Bottom Navigation Components</string>
    <string name="tv_animation1_example">Rotation Animation Component</string>
    <string name="tv_animation2_example">Changing Color Animation Component</string>
    <string name="tv_text_inline_content_example">Text Inline Content Component</string>
    <string name="tv_list_animation_example">List Animation Component</string>
    <string name="tv_theme_example">Theme Component</string>
    <string name="tv_layout_modifier_example">Layout Modifier Components</string>
    <string name="tv_process_death_example">Save State During Process Death</string>
    <string name="tv_live_data_example">Live Data Component</string>
    <string name="tv_filter_chips_example">Filter Chips Component</string>
    <string name="tv_shadow_example">Shadow Component</string>
    <string name="tv_coroutine_flow_example">Coroutine Flow Component</string>
    <string name="tv_compose_classic_example">Compose In Classic Android Component</string>
    <string name="tv_measuring_scale_example">Measuring Scale Component</string>
    <string name="tv_back_press_example">Back Press Component</string>
    <string name="tv_zoomable_example">Zoomable Component</string>
</resources>