<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/simple_text_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startSimpleTextExample"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_simple_text_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/custom_text_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:layout_marginTop="@dimen/default_padding"
            android:onClick="startCustomTextExample"
            android:padding="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:text="@string/tv_custom_text_example"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/vertical_scrollable_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startVerticalScrollableExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_vertical_scrollable_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/horizontal_scrollable_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startHorizontalScrollableExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_horizontal_scrollable_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_image_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="starLoadImageExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_load_image_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/load_clickable_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startAlertDialogExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AlertDialog"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/load_button_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startButtonsExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_buttons_component_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_state_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startStateExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_state_component_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_custom_view_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:visibility="gone"
            android:onClick="startCustomViewExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_custom_view_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_custom_view_paint_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:visibility="gone"
            android:onClick="startCustomViewPaintExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_custom_view_paint_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_autofill_text_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:visibility="gone"
            android:onClick="startAutofillTextExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_input_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_stack_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startStackExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_stack_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_text_align_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:visibility="gone"
            android:onClick="startViewAlignExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_view_layout_arrangement_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_material_design_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startMaterialDesignExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_material_design_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_constraint_layout_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startConstraintLayoutExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_constraint_layout_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/load_live_data_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startLiveDataExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_live_data_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/load_coroutine_flow_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startCoroutineFlowExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_coroutine_flow_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/load_zoomable_example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:onClick="startZoomableExample"
            android:layout_marginTop="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_zoomable_example"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="monospace" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
